--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webext-base-css": "^1.3.1",
+    "webextension-polyfill": "^0.8.0",
     "webextension-polyfill-ts": "^0.25.0"
   },
   "devDependencies": {
@@ -89,4 +90,3 @@
     "wext-manifest-webpack-plugin": "^1.2.1"
   }
 }
-
