--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # ignore haters
 haters/
 
+api/venv/
+
 ### WebStorm+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
