--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 haters/
 
 api/venv/
+api/.deta
 
 ### WebStorm+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
