--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,8 +2,12 @@ cachelib==0.4.1
 click==8.0.3
 deta==1.0.0
 Flask==2.0.2
+Flask-Cors==3.0.10
 Flask-Session==0.4.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+pymongo==3.12.1
+python-dotenv==0.19.2
+six==1.16.0
 Werkzeug==2.0.2
