--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@babel/runtime": "^7.14.0",
     "advanced-css-reset": "^1.2.2",
+    "axios": "^0.24.0",
     "emoji-log": "^1.0.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
